--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+  "name": "docpublish",
+  "description": "This is tool for automated publishing documents of your company",
     "require": {
         "phpoffice/phpword": "^1.3",
         "pclzip/pclzip": "^2.8",
